:sparkles: feat: Página de cadastro

--- a/index.html
+++ b/index.html
@@ -4,9 +4,36 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="app.js"></script>
+  <link rel="icon" href="banco.png" type="image/x-icon">
   <title>Banko</title>
 </head>
 <body>
-  <h1>Banko - Fintech</h1>
+  <header>
+    <div class="logo">
+      <img src="banco.png">
+      <h1>Banko - Fintech</h1>
+    </div>
+    <nav>
+      <a href="">Cadastrar</a>
+      <a href="http://" >About</a>
+      <a href="http://">Services</a>
+      <!-- <a href="http://">Contat</a> -->
+    </nav>
+  </header>
+  <div>
+    <h2>Banko</h2>
+    <p>Sua Revolução Financeira. Simples. Moderno. Seu.</p>
+    <form method="post" action="https://658092233dfdd1b11c41c3da.mockapi.io/banko/clientes" target="_blank">
+      <label for="name">Nome
+        <input type="text" id="name" name="name" placeholder="Seu nome">
+      </label>
+      <label for="cpf">CPF
+        <input type="number" id="cpf" name="cpf" placeholder="Seu CPF">
+      </label>
+      <input type="submit" value="Submit" id="buttonSubmit">
+        <a href="services.html"></a>
+      </input>
+    </form>
+  </div>
 </body>
 </html>
