:sparkles: feat: Página Serviços

--- a/index.html
+++ b/index.html
@@ -15,10 +15,9 @@
       <h1>Banko</h1>
     </div>
     <nav>
-      <a href="">Cadastrar</a>
-      <a href="http://">Serviços</a>
-      <a href="http://" >Sobre</a>
-      <!-- <a href="http://">Contat</a> -->
+      <a href="index.html">Início</a>
+      <a href="index.html">Sobre</a>
+      <a href="index.html">Contato</a>
     </nav>
   </header>
   <section class="hero">
@@ -38,7 +37,7 @@
       <label for="cpf">CPF
         <input type="number" id="cpf" name="cpf" placeholder="Seu CPF" required>
       </label>
-      <input type="submit" id="buttonSubmit" value="Cadastrar" class="buttonForm">
+      <input type="submit" id="buttonCadastrar" value="Cadastrar" class="buttonForm">
     </input>
     </form>
   </div>
