:sparkles:feat: ver dados e saldo

--- a/index.html
+++ b/index.html
@@ -41,7 +41,34 @@
     </input>
     </form>
   </div>
+  <div class="divsContas">
+    <h3>Cliente</h3>
+    <p>Acesse os serviços de sua conta</p>
+    <button class="buttonForm" id="buttonObterCliente">Ver dados do cliente</button>
+    <button class="buttonForm" id="buttonSaldoTotal">Ver saldo total</button>
+    <div id="divCliente"></div>
+  </div>
+  <div class="divsContas">
+    <h3>Conta Corrente</h3>
+    <p>Serviços de sua conta Corrente</p>
+    <button class="buttonForm">Obter Saldo</button>
+    <button class="buttonForm">Depositar</button>
+    <button class="buttonForm">Sacar</button>
+    <button class="buttonForm">Pagar taxa</button>
+    <div id="divCorrente"></div>
+  </div>
+  <div class="divsContas" >
+    <h3>Conta Poupança</h3>
+    <p>Serviços de sua conta Poupança</p>
+    <button class="buttonForm">Obter Saldo</button>
+    <button class="buttonForm">Depositar</button>
+    <button class="buttonForm">Sacar</button>
+    <button class="buttonForm">Investir</button>
+    <div id="divPoupanca"></div>
+  </div>
+</div>
 
+<!-- 
   <h3>A partir de agora conferir no console as funcionalidades!</h3>
   <p>Acessar dados do cliente usando o método mostrarCliente()</p>
   <code>
@@ -83,7 +110,7 @@
   <p>Investir saldo da conta poupança</p>
   <code>
     clientes[0].contapoupanca.investir()
-  </code>
+  </code> -->
 
   <footer>
     <p>Created by Dayana Mariano© 2023</p>
