:sparkles:feat:Obter saldo depositar de Conta corrente

--- a/index.html
+++ b/index.html
@@ -47,14 +47,15 @@
     <button class="buttonForm" id="buttonObterCliente">Ver dados do cliente</button>
     <button class="buttonForm" id="buttonSaldoTotal">Ver saldo total</button>
     <div id="divCliente"></div>
+    <div id="divSaldoTotal"></div>
   </div>
   <div class="divsContas">
     <h3>Conta Corrente</h3>
     <p>Serviços de sua conta Corrente</p>
-    <button class="buttonForm">Obter Saldo</button>
-    <button class="buttonForm">Depositar</button>
-    <button class="buttonForm">Sacar</button>
-    <button class="buttonForm">Pagar taxa</button>
+    <button class="buttonForm" id="buttonSaldoCorrente">Obter Saldo</button>
+    <button class="buttonForm" id="buttonDepositarCorrente">Depositar</button>
+    <button class="buttonForm" id="buttonSacarCorrente">Sacar</button>
+    <button class="buttonForm" id="buttonTaxaCorrente">Pagar taxa</button>
     <div id="divCorrente"></div>
   </div>
   <div class="divsContas" >
