:recycle:refactor: estrutura

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
     <button class="buttonForm" id="buttonSacarCorrente">Sacar</button>
     <button class="buttonForm" id="buttonTaxaCorrente">Pagar taxa</button>
     <div id="divCorrente"></div>
+    <div id="divSaldoCorrente"></div>
   </div>
   <div class="divsContas" >
     <h3>Conta Poupança</h3>
